[package]
name = "showdown-hunter"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = {version = "0.1.3", default-features = false, features = ["serde"] }
leptos_meta = {version = "0.1.3", default-features = false }
leptos_router = {version = "0.1.3", default-features = false }
log = {version = "0.4.17" }
console_log = {version = "0.2.0", optional = true }
console_error_panic_hook = {version = "0.1.7", optional = true }
actix-web = {version = "4.3.0", optional = true }
leptos_actix = { version = "0.1.3", optional = true }
actix-files = {version = "0.6.2", optional = true}
cfg-if = "1.0.0"
wasm-bindgen = {version = "0.2.84", optional = true }
sqlx = { version = "0.6.2", features = [ "postgres", "runtime-tokio-native-tls", "offline" ], optional = true }
serde = {version = "1.0.152", features = ['derive'] }
futures = "0.3.26"
smog_strat_dex_rs = {git = "https://github.com/SteveCookTU/smog_strat_dex_rs.git", rev = "0ef99f2"}
rand = {version = "0.8.5", optional = true }

[features]
ssr = [
    "dep:sqlx",
    "dep:actix-files",
    "dep:actix-web",
    "dep:rand",
    "leptos/ssr",
    "leptos_actix",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]
hydrate = ["dep:console_log", "dep:console_error_panic_hook", "leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "dep:wasm-bindgen"]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "showdown-hunter"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "./style/output.css"
# [Optional] Files in the asset-dir will be copied to the site-root directory
assets-dir = "public"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-address = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with tha tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "PROD"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false